--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -6,7 +6,7 @@
 <p>La importancia del compromiso en el matrimonio y someterse al Señor</p>
 
 <h3>Dios no está muerto</h3>
-<p>¡Cuán imprtante es mantener nuestra fe a pesar del rechazo en este mundo</p>
+<p>¡Cuán importante es mantener nuestra fe a pesar del rechazo en este mundo</p>
 
 <h3>Vencedor</h3>
 <p>La importancia de la confianza en el Dios de lo imposible</p>
